--- a/frontend/src/app.html
+++ b/frontend/src/app.html
@@ -15,17 +15,17 @@
     <meta property="og:title" content="Tiger Racing Member Portal">
     <meta property="og:description" content="Member portal for Formula LSU.">
     <meta property="og:site_name" content="Tiger Racing Member Portal">
-    <meta property="og:image" content="/favicon.png">
+    <meta property="og:image" content="/favicon.ico">
     <meta property="og:image:alt" content="TigerRacing Logo">
     <meta property="og:locale" content="en_US">
 
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Tiger Racing Member Portal">
     <meta name="twitter:description" content="Member portal for Formula LSU.">
-    <meta name="twitter:image" content="/favicon.png">
+    <meta name="twitter:image" content="/favicon.ico">
 
     <link rel="canonical" href="https://portal.formulalsu.org">
-    <link rel="icon" type="image/svg+xml" href="/favicon.png">
+    <link rel="icon" type="image/svg+xml" href="/favicon.ico">
 	%sveltekit.head%
 </head>
 <body data-sveltekit-preload-data="hover">
